--- a/profile.html
+++ b/profile.html
@@ -136,7 +136,7 @@
 </body>
 <script>
   function myFunc(){
-    alert("Payment Has been processed...")
+    alert("Payment Processing...")
   }
 </script>
 </html>
