--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'></link>
   <link rel="stylesheet" href="profile.css">
   <title>Profile</title>
 </head>
@@ -133,37 +134,17 @@
 </div>
 </div>
 
-<div id="myModal" class="modal">
-  <div class="modal-content">
-    <p class="pay-text">Payment Processed Successfully</p>
-  </div>
-</div>
+
 </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script> 
 <script>
   function myFunc(){
-    alert("Payment Loading...")
-    const modal = document.getElementById("myModal");
-  setTimeout(function() {
-    modal.style.display = "block";
+    swal("Payment Processing", "loading...", "info");  
+    setTimeout(function() {
+        swal("Done", "Payment has been process successfully", "success");
   }, 3000);
 
-  setTimeout(function(){
-  modal.style.display = "none";
-},5000)
-
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-  //   alert("Payment loading...");
-
-  // // Wait for 5 seconds
-  // setTimeout(function() {
-  //   // Display a payment done popup
-  //   alert("Payment done!");
-  // }, 5000);
   }
 </script>
 </html>
